Fixed Split Screen View & Message Overflow

--- a/src/components/DragDrop/DragDrop.css
+++ b/src/components/DragDrop/DragDrop.css
@@ -31,5 +31,5 @@ h1 {
 .component-container {
     background: transparent;
     padding: 10px;
-    height: 25vh;
+    height: 100vh;
 }
