--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -23,6 +23,7 @@
   font-size: 16px;
   font-weight: 800;
   padding: 25px;
+  padding-left: 5px;
 }
 
 .left-items, .right-items {
